--- a/ranzhi/test-output/emailable-report.html
+++ b/ranzhi/test-output/emailable-report.html
@@ -9,12 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">33,571</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">28,722</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">ranzhi.login</td><td><a href="#m0">GetInBackStage</a></td><td rowspan="1">1511234110113</td><td rowspan="1">2383</td></tr><tr class="passedeven"><td><a href="#m1">loginranzhi</a></td><td rowspan="1">1511234099549</td><td rowspan="1">10548</td></tr><tr class="passedeven"><td><a href="#m2">shangjibumen</a></td><td rowspan="1">1511234112497</td><td rowspan="1">11034</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">ranzhi.login</td><td><a href="#m0">GetInBackStage</a></td><td rowspan="1">1512630349794</td><td rowspan="1">1461</td></tr><tr class="passedeven"><td><a href="#m1">groupSQ</a></td><td rowspan="1">1512630351256</td><td rowspan="1">8428</td></tr><tr class="passedeven"><td><a href="#m2">loginranzhi</a></td><td rowspan="1">1512630340670</td><td rowspan="1">9114</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">ranzhi.login#GetInBackStage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">ranzhi.login#loginranzhi</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">ranzhi.login#shangjibumen</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">ranzhi.login#groupSQ</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">ranzhi.login#loginranzhi</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
