--- a/ranzhi/test-output/index.html
+++ b/ranzhi/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\林飞\AppData\Local\Temp\testng-eclipse--180526865\testng-customsuite.xml</span>
+                    <span>C:\Users\林飞\AppData\Local\Temp\testng-eclipse--665746440\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -107,12 +107,12 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="ranzhi.login" hash-for-method="loginranzhi">loginranzhi</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="ranzhi.login" hash-for-method="groupSQ">groupSQ</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="ranzhi.login" hash-for-method="shangjibumen">shangjibumen</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="ranzhi.login" hash-for-method="loginranzhi">loginranzhi</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,16 +142,16 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="loginranzhi">
-                  </a> <!-- loginranzhi -->
-                  <span class="method-name">loginranzhi</span>
+                  <a name="groupSQ">
+                  </a> <!-- groupSQ -->
+                  <span class="method-name">groupSQ</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="shangjibumen">
-                  </a> <!-- shangjibumen -->
-                  <span class="method-name">shangjibumen</span>
+                  <a name="loginranzhi">
+                  </a> <!-- loginranzhi -->
+                  <span class="method-name">loginranzhi</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -159,7 +159,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\林飞\AppData\Local\Temp\testng-eclipse--180526865\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\林飞\AppData\Local\Temp\testng-eclipse--665746440\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -170,9 +170,9 @@
     &lt;classes&gt;
       &lt;class name=&quot;ranzhi.login&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;shangjibumen&quot;/&gt;
           &lt;include name=&quot;loginranzhi&quot;/&gt;
           &lt;include name=&quot;GetInBackStage&quot;/&gt;
+          &lt;include name=&quot;groupSQ&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- ranzhi.login --&gt;
     &lt;/classes&gt;
@@ -216,22 +216,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'shangjibumen')
+data.setCell(0, 1, 'loginranzhi')
 data.setCell(0, 2, 'ranzhi.login')
-data.setCell(0, 3, 11034);
+data.setCell(0, 3, 9114);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'loginranzhi')
+data.setCell(1, 1, 'groupSQ')
 data.setCell(1, 2, 'ranzhi.login')
-data.setCell(1, 3, 10548);
+data.setCell(1, 3, 8428);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'GetInBackStage')
 data.setCell(2, 2, 'ranzhi.login')
-data.setCell(2, 3, 2383);
+data.setCell(2, 3, 1461);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 23 seconds</span>
+              <span class="suite-total-time">Total running time: 19 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -246,7 +246,7 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">3 ignored methods</span>
+            <span class="header-content">10 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
@@ -254,9 +254,23 @@ return data;
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">bmname</span>
                 <br/>
+                <span class="ignored-method-name">addgroup</span>
+                <br/>
+                <span class="ignored-method-name">bumenmanager</span>
+                <br/>
                 <span class="ignored-method-name">CompanyName</span>
                 <br/>
+                <span class="ignored-method-name">shangjibumen</span>
+                <br/>
+                <span class="ignored-method-name">bumenname</span>
+                <br/>
                 <span class="ignored-method-name">zzcyname</span>
+                <br/>
+                <span class="ignored-method-name">deletegroup</span>
+                <br/>
+                <span class="ignored-method-name">findmember</span>
+                <br/>
+                <span class="ignored-method-name">shouquan</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -275,15 +289,15 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">loginranzhi</span>
-                <span class="method-start">9573 ms</span>
+                <span class="method-start">9692 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">GetInBackStage</span>
-                <span class="method-start">20137 ms</span>
+                <span class="method-start">18816 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">shangjibumen</span>
-                <span class="method-start">22521 ms</span>
+                <span class="method-name">groupSQ</span>
+                <span class="method-start">20278 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
