--- a/ranzhi/test-output/old/Default suite/classes.html
+++ b/ranzhi/test-output/old/Default suite/classes.html
@@ -11,11 +11,35 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>groupSQ</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>deletegroup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>GetInBackStage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>bumenname</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>CompanyName</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>zzcyname</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>shouquan</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>findmember</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -27,7 +51,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>GetInBackStage</td>
+<td>addgroup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>bumenmanager</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
